src/objects/ScenarioItem__c.object
<CustomObject>
    <fields>
        <fullName>InPlaceMax__c</fullName>
        <label>In Place Max</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InPlace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Scenario Items</relationshipLabel>
        <relationshipName>ScenarioItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <description>Specify the minimum number of this item to be distributed</description>
        <label>Min</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <label>Scenario</label>
        <referenceTo>Scenario__c</referenceTo>
        <relationshipLabel>Scenario Items</relationshipLabel>
        <relationshipName>ScenarioItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Scenario Item</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scenario Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>